# LidarAnalysis

./: .gitignore  README.md
Analysis/: DataAnalysisWithPlotting.ipynb  combineCode.py  models.py  plotAverages.py  plotDistance.py  plotSize.py  plotter.py  reconstructImage.py  simulate.py
CircuitPlaygroundExpress/: README.txt  piGetLightData.py
CircuitPlaygroundExpress/code/: code.py
DataCollection/: dataCollection.py  scenarioEnums.py
PostProcessing/: README.txt
PostProcessing/MyCatkin/App/Python/: addSensorDataToFile.py  histogram.py
PostProcessing/MyCatkin/App/launch/: lidarProcessing.launch
PostProcessing/MyCatkin/App/src/post_process_pointcloud/: CMakeLists.txt  package.xml
PostProcessing/MyCatkin/App/src/post_process_pointcloud/include/post_process_pointcloud/: defs.h  pointcloud.h  realsense_interface.h
PostProcessing/MyCatkin/App/src/post_process_pointcloud/msg/: PointCountAndColor.msg
PostProcessing/MyCatkin/App/src/post_process_pointcloud/src/: pointcloud.cpp  realsense_interface.cpp
Results/: averages.txt
Results/Cubes/160mm/2ft/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Cubes/160mm/6ft/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Cubes/40mm/2ft/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Cubes/40mm/4ft/: lidarPoints.json  pixels.txt  sameSizeAllData.json
Results/Cubes/80mm/2ft/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Cubes/80mm/4ft/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Cubes/80mm/6ft/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Handwarmers/Black/2ft/40C/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Handwarmers/Black/2ft/45C/: lidarPoints.json  sameSizeAllData.json
Results/Handwarmers/Black/2ft/Ambient/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Handwarmers/Black/4ft/40C/: lidarPoints.json  sameSizeAllData.json
Results/Handwarmers/Black/4ft/45C/: lidarPoints.json  pixelPoints.txt  sameSizeAllData.json
Results/Handwarmers/Black/4ft/Ambient/: lidarPoints.json  sameSizeAllData.json
Results/Handwarmers/Black/6ft/40C/: lidarPoints.json  sameSizeAllData.json
Results/Handwarmers/Black/6ft/50C/: lidarPoints.json  sameSizeAllData.json
Results/Handwarmers/Black/6ft/Ambient/: lidarPoints.json  sameSizeAllData.json
Results/Handwarmers/Blue/2ft/40C/: lidarPoints.json  sameSizeAllData.json
Results/Handwarmers/Blue/2ft/45C/: lidarPoints.json  sameSizeAllData.json
Results/Handwarmers/Blue/2ft/Ambient/: lidarPoints.json  sameSizeAllData.json
SenseHat/: sensehat.py
(+54 files in other folders)
